force-app/main/default/objects/Claim/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>