force-app/main/default/objects/Claim/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>