force-app/main/default/objects/Claim/fields/Current_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Current_Mileage__c</fullName>
    <description>Vehicle odometer reading (in km) at the time this warranty claim was submitted. Used in Factor 2 (Vehicle History Consistency) to detect odometer rollback fraud.</description>
    <label>Current Mileage (km)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>