force-app/main/default/objects/Claim/fields/Evidence_Completed__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence Completed</label>
    <type>Checkbox</type>
</CustomField>