force-app/main/default/objects/Claim/fields/Fruad_Flag__c.field-meta.xml
<CustomField>
    <fullName>Fruad_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fruad Flag</label>
    <type>Checkbox</type>
</CustomField>