force-app/main/default/objects/Claim/fields/Scoring_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Run_At__c</fullName>
    <description>Timestamp of the most recent confidence score calculation. Updated every time ClaimScoringEngine.calculateScore() runs.</description>
    <label>Scoring Run At</label>
    <type>DateTime</type>
</CustomField>