force-app/main/default/objects/Claim/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName>
    <description>4-hour SLA due date for human review. Set when claim is routed to Human Review (score 40–84).</description>
    <label>SLA Due Date</label>
    <type>DateTime</type>
</CustomField>