force-app/main/default/objects/Claim/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ClaimReasonType</columns>
    <columns>Status</columns>
    <columns>ApprovedAmount</columns>
    <columns>LastModifiedDate</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
</ListView>