force-app/main/default/objects/Claim/listViews/Whatsappqueue_Claim.listView-meta.xml
<ListView>
    <fullName>Whatsappqueue_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Whatsappqueue</label>
    <queue>Whatsappqueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>